--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,3 @@
 Nov 1st 2021 - the framework is updated with the right version of libnvme
 update it to triger the bot
-m5 triger bot
+m5 triger bot, triger bot
